syntax = "proto3";

package registadb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// -----------------------------
// Generic Value
// -----------------------------
message StringList {
  repeated string value = 1;
}

message IntList {
  repeated int64 value = 1;
}

message DoubleList {
  repeated double value = 1;
}

message BoolList {
  repeated bool value = 1;
}

message StringMap {
  map<string,string> value = 1;
}

message EntryValue {
  oneof kind {
    string string_value = 1;
    double double_value = 2;
    int64 int_value = 3;
    bool bool_value = 4;

    StringList string_list = 5;
    DoubleList double_list = 6;
    IntList int_list = 7;
    BoolList bool_list = 8;
    StringMap string_map = 9;

    google.protobuf.Struct json_value = 10;

    bytes bytes_value = 11;
  }
}

// -----------------------------
// Entry stored in RocksDB
// -----------------------------
message Entry {
  uint64 id = 1; // optional: 0 = server generates
  map<string, string> metadata = 2;
  EntryValue data = 3;

  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// -----------------------------
// CRUD operation type
// -----------------------------
enum OperationType {
  OP_UNKNOWN = 0;
  OP_CREATE = 1;
  OP_READ = 2;
  OP_UPDATE = 3;
  OP_DELETE = 4;
}

// -----------------------------
// Generic Request
// -----------------------------
message Request {
  OperationType op = 1;

  // For CREATE/UPDATE
  Entry entry = 2;

  // For READ/DELETE
  uint64 id = 3;
}

// -----------------------------
// Generic Response
// -----------------------------
enum OperationStatus {
  STATUS_OK = 0;
  STATUS_NOT_FOUND = 1;
  STATUS_INVALID_ARGUMENT = 2;
  STATUS_INTERNAL_ERROR = 3;
}

message Response {
  OperationStatus status = 1;
  string message = 2;

  // For CREATE/READ/UPDATE
  Entry entry = 3;
}